@@ -1,28 +1,35 @@
 package org.adonai.export;
 
+import java.lang.reflect.InvocationTargetException;
+import java.util.List;
+import org.adonai.ApplicationEnvironment;
+import org.adonai.api.ExportBuilder;
 import org.adonai.model.Configuration;
-import org.reflections.Reflections;
-
-import java.util.Set;
 
 public class DefaultExportConfigurationCreator {
 
-  public void createDefaultExportConfigurations (final Configuration configuration) {
+  public void createDefaultExportConfigurations (final ApplicationEnvironment applicationEnvironment,
+                                                 final Configuration configuration) {
 
-    Reflections reflections = new Reflections("org.adonai.export");
-    Set<Class<? extends AbstractDocumentBuilder>> subTypes = reflections.getSubTypesOf(AbstractDocumentBuilder.class);
-    for (Class<?extends AbstractDocumentBuilder> next: subTypes) {
+    List<ExportBuilder> exportBuilderList = applicationEnvironment.getExtensions(ExportBuilder.class);
 
-      if (configuration.findDefaultExportConfiguration(next) == null)
+    for (ExportBuilder next: exportBuilderList) {
+      AbstractDocumentBuilder abstractDocumentBuilder = (AbstractDocumentBuilder) next;
+
+      if (configuration.findDefaultExportConfiguration(abstractDocumentBuilder.getClass()) == null)
       try {
-        AbstractDocumentBuilder documentBuilder = next.newInstance();
+        AbstractDocumentBuilder documentBuilder = abstractDocumentBuilder.getClass().getDeclaredConstructor().newInstance();
         ExportConfiguration defaultConfiguration = documentBuilder.getDefaultConfiguration();
-        defaultConfiguration.setDocumentBuilderClass(next.getName());
+        defaultConfiguration.setDocumentBuilderClass(abstractDocumentBuilder.getClass().getName());
         defaultConfiguration.setDefaultConfiguration(true);
         configuration.getExportConfigurations().add(defaultConfiguration);
       } catch (InstantiationException e) {
         throw new IllegalStateException(e);
       } catch (IllegalAccessException e) {
+        throw new IllegalStateException(e);
+      } catch (NoSuchMethodException e) {
+        throw new IllegalStateException(e);
+      } catch (InvocationTargetException e) {
         throw new IllegalStateException(e);
       }
 
